fix overlap de product-sale e icono camion

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -144,6 +144,7 @@ main{
     position: relative;
     border-top: 1px solid #eee;
     margin-bottom: 10px;
+    padding-top:10px ;
 }
 .container-info i{
     position: absolute;
